Enhanced the Appointments Controller to handle possible failures and exceptions

--- a/Appointments/Appointments.API/appsettings.json
+++ b/Appointments/Appointments.API/appsettings.json
@@ -1,4 +1,14 @@
 {
+    "profiles": {
+        "AppointmentManagementAPI": {
+            "environmentVariables": {
+                "Email:From": "instudio.mtr@gmail.com",
+                "Email:Password": "your-email-password",
+                "Email:SmtpHost": "smtp.example.com",
+                "Email:SmtpPort": "587"
+            }
+        }
+    },
     "ConnectionStrings": {
         "AppointmentsDb": "Server=COL-LT-241015A\\MSSQLSERVER01;Database=Appointments;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
