Configured appsettings with required fields

--- a/Appointments/Appointments.API/appsettings.json
+++ b/Appointments/Appointments.API/appsettings.json
@@ -1,6 +1,16 @@
 {
+    "profiles": {
+        "AppointmentManagementAPI": {
+            "environmentVariables": {
+                "Email:From": "admin_user@mail.com",
+                "Email:Password": "your-email-password",
+                "Email:SmtpHost": "smtp.example.com",
+                "Email:SmtpPort": "587"
+            }
+        }
+    },
     "ConnectionStrings": {
-        "AppointmentsDb": "Server=COL-LT-241015A\\MSSQLSERVER01;Database=Appointments;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "AppointmentsDb": "{YourServer}\\MSSQLSERVER01;Database=Appointments;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
